# af3-server

./: .gitignore  README.md  example.py  launch.sh  pyproject.toml  test_server.sh
server/: server.py
src/af3_server/: __init__.py  client.py
