[project]
name = "af3-server"
version = "0.1.0"
description = "Persistent AlphaFold 3 inference server (FastAPI + Apptainer) with Python client"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/af3_server"]
